--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 addopts = --doctest-modules -ra --tb short
 codestyle_max_line_length = 100
+codestyle_ignore = E402
+norecursedirs = examples
